--- a/insta.html
+++ b/insta.html
@@ -16,29 +16,24 @@
     </form>
     <div id="instagram-feed-demo" class="instagram_feed"></div>
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-<script src="jquery.instagramFeed.js"></script>
-
+<script src="InstagramFeed.min.js"></script>
 <script>
-        $(window).on('load', function(){
-            $.instagramFeed({
-                'username': 'instagram',
-                'container': "#instagram-feed1",
-                'display_profile': true,
-                'display_biography': true,
-                'display_gallery': true,
-                'callback': null,
-                'styling': true,
-                'items': 8,
-                'items_per_row': 4,
-                'margin': 1,
-                'lazy_load': true,
-                'on_error': console.error
-            });
+    (function(){
+        new InstagramFeed({
+            'username': 'instagram',
+            'container': document.getElementById("instagram-feed1"),
+            'display_profile': true,
+            'display_biography': true,
+            'display_gallery': true,
+            'callback': null,
+            'styling': true,
+            'items': 8,
+            'items_per_row': 4,
+            'margin': 1,
+            'lazy_load': true,
+            'on_error': console.error
         });
-    (jQuery);
+    })();
 </script>
 
 </html>
