minor adjustments to

--- a/index.html
+++ b/index.html
@@ -66,16 +66,14 @@
     <section id="musixmatch-lyrics" class="lyrics">
         <div class="flex-row">
             <div id="search-lyrics">
-                <h5 class="section-title" secondary-border">What Tune are You Humming?</h5>
-
-                <div id="song-search">
-                    <input type="text" placeholder="Killer Tune Name" id="tune">
-                    <input type="text" placeholder="Artist Name (optional)" id="artist">
-                </div>
-
-                <div class="search-box">
-                    <button type="submit" id="btn_submit" class="button-primary">Search</button>
-                </div>
+                <h5 class="section-title primary-border">What Tune are You Humming?</h5>
+            </div>
+            <div id="song-search">
+                <input type="text" placeholder="Killer Tune Name" id="tune">
+                <input type="text" placeholder="Artist Name (optional)" id="artist">
+            </div>
+            <div class="search-box">
+                <button type="submit" id="btn_submit" class="button-primary">Search</button>
             </div>
         </div>
     </section>
