--- a/insta.html
+++ b/insta.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Feed Demo</title>
-    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css">
 </head>
 
 <body>
@@ -14,11 +13,14 @@
         <input type="text" id="username" placeholder="Enter Username" required>
         <input type="submit" value="Search">
     </form>
+
     <div id="instagram-feed-demo" class="instagram_feed"></div>
+
 </body>
+
 <script src="InstagramFeed.min.js"></script>
 <script>
-    (function(){
+    (function () {
         new InstagramFeed({
             'username': 'instagram',
             'container': document.getElementById("instagram-feed1"),
@@ -32,6 +34,12 @@
             'margin': 1,
             'lazy_load': true,
             'on_error': console.error
+        });
+
+        new InstagramFeed({
+            on_error: function (error_description, error_code) {
+                console.log("error")
+            }
         });
     })();
 </script>
