youtube iframe updated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- <form> -->
                     <label for="band-search">Search Below</label>
                     <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
-                    <input class="button-primary" id="btn" onclick="getDataFromYoutube()" type="submit" value="artist">
+                    <input class="button-primary" id="btn" type="submit" value="artist">
                 <!-- </form> -->
             </div>
                 <div id="content-container" class="eight columns">
@@ -34,7 +34,7 @@
                     <div>        <h1 class="title">Youtube API</h1>
                        
                      
-                        <div id="videoListContainer"></div>
+                        <div id="youtubeDiv"></div>
                         <div id="output"></div></div>
                     <div>Fill Container</div>
                     <div>Fill Container</div>
