Incorporating Random Quotes and Gifs into index.html

--- a/index-test.html
+++ b/index-test.html
@@ -18,14 +18,7 @@
     <div class="container">
         <div class="row">
             <div id="profile-container" class="three columns">
-                <img src="https://via.placeholder.com/150" alt="Placeholder">
-                <div class="SpotifyData" id="response-container">Input Info (Spotify?)</div>
-                <!-- <button class="btn button"></button> -->
-                <div>Input Info (iTunes?)</div>
-                <div>Input Info (Wikipedia?)</div>
-                <div>Input Info (Instagram?)</div>
-                <div>Input Info (Twitter?)</div>
-                <!-- <form> -->
+                <div id="response-container">Input Info (Spotify?)</div>
                 <label for="band-search">Search Below</label>
                 <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
                 <input class="button-primary btn" id="band-search" onclick="giphyFunction(), myFunction()" type="submit"
