--- a/spotify.html
+++ b/spotify.html
@@ -51,9 +51,7 @@
         <div id="random-response-author" class="randomAuthorHere"></div>
         <div id="lyric-container" class="lyricContainer"></div>
     </div>
-    <footer>
-        <button id="light-mode-toggle" class="button-primary" type="button">Toggle Boggle</button>
-    </footer>
+    <button id="light-mode-toggle" class="button-primary top-right" type="button">Toggle Boggle</button>
     <script src="./Assets/js/app.js" type="text/javascript"></script>
     <script src="./Assets/js/lightmode.js" type="text/javascript"></script>
 </body>
