--- a/index.html
+++ b/index.html
@@ -8,32 +8,35 @@
     <link rel="stylesheet" href="./Assets/css/normalize.css">
     <link rel="stylesheet" href="./Assets/css/skeleton.css">
     <link rel="stylesheet" href="./Assets/css/style.css">
-</head>
 
 <body>
+
+
+
     <header>
-        <h3>BOOMTOWN</h3>
+        <h3>Profile Generator</h3>
+        <!-- DIV ID RESPONSE CONTAINER HOLDS GIF -->
         <!-- random quote generator -->
-    <button class="random-btn" id="random-btn" type="input" value="text" onclick="myRandomFunction()">Click for Random
-        Quote!</button>
-    <div id="random-response-container" class="randomquoteHere"></div>
-    <div id="random-response-author" class="randomAuthorHere"></div>
-    <div>
-        <p></p>
-    </div>Search term: <input type="text" id="searchTerm" value=""/>
-    <div>
-        <button class="btn" id="btn" type="input" value="text" onclick="myFunction()">Search!</button>
-        <div id="search-container" class="searchHere">Searched Quote: </div>
-    </div>
+        <button class="random-btn button-primary" id="random-btn" type="input" value="text"
+        onclick="myRandomFunction()">Click for Random
+        Quote:</button>
+        <div id="random-response-container" class="randomquoteHere"></div>
+        <div id="random-response-author" class="randomAuthorHere"></div>
     </header>
+
+
+
     <div id="profile" class="row">
-        <form>
-            <div id="left-column" class="two columns">
-                <label for="Genre" class="">Find your Topic:</label>
-                <input class="u-full-width" type="text" placeholder="Text, Please" id="search-content">
-                <button type="submit" id="btn_search" class="">Search</button>
-            </div>
-        </form>
+        <div id="left-column" class="two columns">
+            <label for="topic-search">Search Topics:</label>
+            <input type="" placeholder="Topic Search" id="topic-search">
+            <input class="button-primary btn" id="topic-search" onclick="giphyFunction(), myFunction()" type="submit"
+            value="Gif It">
+            <!-- Holds Gif -->
+            <div id="response-container"></div>
+        </div>
+
+
         <div class="row">
             <div id="youtube-container" class="eight columns">
                 <div>
@@ -53,7 +56,10 @@
             </div>
         </div>
     </div>
+    <button id="light-mode-toggle" class="button-primary top-right" type="button">Toggle</button>
+    <!-- <script src="Assets/js/script.js"></script> -->
     <script src="./Assets/js/randomQuoteGen.js"></script>
+    <script src="./Assets/js/lightmode.js"></script>
 </body>
 
 </html>
