--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         <h3>Profile Generator</h3>
         <!-- DIV ID RESPONSE CONTAINER HOLDS GIF -->
         <!-- random quote generator -->
-        <button class="random-btn button-primary" id="random-btn" type="input" value="text"
-        onclick="myRandomFunction()">Click for Random
-        Quote:</button>
+        <button class="random-btn button-primary top-left" id="random-btn" type="input" value="text"
+        onclick="myRandomFunction()">Randomize</button>
         <div id="random-response-container" class="randomquoteHere"></div>
         <div id="random-response-author" class="randomAuthorHere"></div>
     </header>
