--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="profile" class="row">
         <div id="left-column" class="two columns">
             <label for="topic-search">Search Topics:</label>
-            <input type="" placeholder="Topic Search" id="topic-search">
+            <input type="" placeholder="Topic Search" id="topic-search-input">
             <input class="button-primary btn" id="topic-search" onclick="giphyFunction(), myFunction()" type="submit"
             value="Gif It">
             <!-- Holds Gif -->
@@ -37,28 +37,33 @@
 
 
         <div class="row">
-            <div id="youtube-container" class="eight columns">
+            <div id="youtube-container" class="nine columns">
                 <div>
-                    <iframe id="if1" width="360" height="200" src="https://www.youtube.com/embed/q7JDYiLz9Mo"
-                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe id="if2" width="360" height="200" src="https://www.youtube.com/embed/GRxofEmo3HA"
-                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe id="if3" width="360" height="200" src="https://www.youtube.com/embed/arj7oStGLkU"
-                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe id="if4" width="360" height="200" src="https://www.youtube.com/embed/6DVbt5W-DNc"
-                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div class="four columns">
+                        <div id= "youtubeDiv1">
+                        </div>
+                        <div id= "youtubeDiv2">
+                        </div>
+                    </div>
+                    <div class="four columns">
+                        <div id= "youtubeDiv3">
+                        </div>
+                        <div id= "youtubeDiv4">
+                        </div>
+                    </div>   
                 </div>
             </div>
         </div>
     </div>
     <button id="light-mode-toggle" class="button-primary top-right" type="button">Toggle</button>
-    <!-- <script src="Assets/js/script.js"></script> -->
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
     <script src="./Assets/js/randomQuoteGen.js"></script>
     <script src="./Assets/js/lightmode.js"></script>
+    <script src="Assets/js/youtube.js"></script>
 </body>
 
 </html>
