--- a/spotify.html
+++ b/spotify.html
@@ -53,7 +53,12 @@
     </div>
     <button id="light-mode-toggle" class="button-primary top-right" type="button">Toggle Boggle</button>
     <script src="./Assets/js/app.js" type="text/javascript"></script>
-    <script src="./Assets/js/lightmode.js" type="text/javascript"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
+    <script src="./Assets/js/lightmode.js"></script>
 </body>
 
 </html>
