Updated header and title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genre Mamba</title>
+    <title>ADD Interpreted</title>
     <link rel="stylesheet" href="./Assets/css/normalize.css">
     <link rel="stylesheet" href="./Assets/css/skeleton.css">
     <link rel="stylesheet" href="./Assets/css/style.css">
@@ -14,7 +14,7 @@
 
 
     <header>
-        <h3>Profile Generator</h3>
+        <h3>ADD Interpreted</h3>
         <!-- DIV ID RESPONSE CONTAINER HOLDS GIF -->
         <!-- random quote generator -->
         <button class="random-btn button-primary top-left" id="random-btn" type="input" value="text"
