save all information to local storage

--- a/index-test.html
+++ b/index-test.html
@@ -68,6 +68,8 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
-    <script src="./Assets/js/youtube.js"></script> 
+    <!-- <script src="./Assets/js/youtube.js"></script>  -->
+    <!-- working on adding localStorage -->
+    <script src="Assets/js/localStorage.js"></script>
 </body>
 </html>
