--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <script src="./Assets/js/randomQuoteGen.js"></script>
     <script src="./Assets/js/lightmode.js"></script>
     <script src="Assets/js/youtube.js"></script>
+    <script src="Assets/js/localStorage.js"></script>
 </body>
 
 </html>
