trying to work on localStorage

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <input type="" placeholder="Topic Search" id="topic-search-input">
             <input class="button-primary btn" id="topic-search" onclick="giphyFunction(), myFunction()" type="submit"
             value="Gif It">
+            <input class="button-secondary btn" id="topic-history" onclick="goBackFunction()" type="submit"
+            value="!sdrawkcab oG">
             <!-- Holds Gif -->
             <div id="response-container"></div>
         </div>
