localStorage is working

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="left-column" class="two columns">
             <label for="topic-search">Search Topics:</label>
             <input type="" placeholder="Topic Search" id="topic-search-input">
-            <input class="button-primary btn" id="topic-search" onclick="giphyFunction(), myFunction()" type="submit"
+            <input class="button-primary btn" id="topic-search" onclick="giphyFunction(), myFunction(), storageFunction()" type="submit"
             value="Gif It">
             <!-- Holds Gif -->
             <div id="response-container"></div>
