previous searches now append to DOM and you can click on previous search to trigger past searches

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             value="Gif It">
             <!-- Holds Gif -->
             <div id="response-container"></div>
+            <div style="border:1px solid green; width:100px; height:100px; overflow-y:scroll;" 
+            id="searchDiv"> 
+                <ul id="searchHistory"></ul> 
+            </div>
         </div>
 
 
