--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- DIV ID RESPONSE CONTAINER HOLDS GIF -->
         <!-- random quote generator -->
         <button class="random-btn button-primary top-left" id="random-btn" type="input" value="text"
-        onclick="myRandomFunction()">Boggle</button>
+            onclick="myRandomFunction()">Boggle</button>
         <div id="random-response-container" class="randomquoteHere"></div>
         <div id="random-response-author" class="randomAuthorHere"></div>
     </header>
@@ -29,13 +29,16 @@
         <div id="left-column" class="two columns">
             <label for="topic-search">Search Topics:</label>
             <input type="" placeholder="Topic Search" id="topic-search-input">
-            <input class="button-primary btn" id="topic-search" onclick="giphyFunction(), myFunction(), storageFunction()" type="submit"
-            value="Gif It">
+            <input class="button-primary btn" id="topic-search"
+                onclick="giphyFunction(), myFunction(), storageFunction()" type="submit" value="Oggle">
+            <form action="http://google.com">
+                <input class="button-primary btn" id="spotify" onclick="window.location.href='';"
+                    type="submit" value="Joggle">
+            </form>
             <!-- Holds Gif -->
             <div id="response-container"></div>
-            <div style="border:1px solid green; width:100px; height:100px; overflow-y:scroll;" 
-            id="searchDiv"> 
-                <ul id="searchHistory"></ul> 
+            <div style="border:1px solid green; width:100px; height:100px; overflow-y:scroll;" id="searchDiv">
+                <ul id="searchHistory"></ul>
             </div>
         </div>
 
@@ -44,26 +47,24 @@
             <div id="youtube-container" class="nine columns">
                 <div>
                     <div class="four columns">
-                        <div id= "youtubeDiv1">
+                        <div id="youtubeDiv1">
                         </div>
-                        <div id= "youtubeDiv2">
+                        <div id="youtubeDiv2">
                         </div>
                     </div>
                     <div class="four columns">
-                        <div id= "youtubeDiv3">
+                        <div id="youtubeDiv3">
                         </div>
-                        <div id= "youtubeDiv4">
+                        <div id="youtubeDiv4">
                         </div>
-                    </div>   
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <button id="light-mode-toggle" class="button-primary top-right" type="button">Toggle</button>
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
     <script src="./Assets/js/randomQuoteGen.js"></script>
     <script src="./Assets/js/lightmode.js"></script>
